--- a/docs/changelogs/V2.0.0.md
+++ b/docs/changelogs/V2.0.0.md
@@ -1,14 +1,15 @@
 ---
-name: DMC V2
+name: Version 2.0.0
 endpoint: /release-2-0-0
-description: Release announcement for DMC 2.0.0
+description: Release announcement for Dash Mantine Components v2.0.0
 dmc: false
 ---
 
-### 🎉 Dash Mantine Components 2.0.0 (Based on Mantine v8)
+### 🎉 Dash Mantine Components v2 (Powered by Mantine v8)
 
 We’re excited to announce a new release of Dash Mantine Components! This update brings a range of new components, 
 enhanced features, and improvements to make building beautiful Dash apps even easier. 
+
 
 ### Migration Guide
 
@@ -18,12 +19,12 @@ major releases.  See our [Migration Guide](/migration) for step-by-step instruct
 ### What's New
 
 *  **Functions as Props** – Use JavaScript functions from Python to customize charts, sliders, filters, dropdowns, and more
+*  **Simplified Notifications** – Use `NotificationContainer` and the Mantine API directly in clientside callbacks
 *  **New DatePicker** – A calendar-only component with full support for multi-date, ranges, and custom disabled logic
 *  **New TimePicker & TimeGrid** – Better time selection with dropdowns, 12/24h formats, and predefined slots
-*  **Simplified Notifications** – Use `NotificationContainer` and the Mantine API directly in clientside callbacks
 *  **Submenus in Menu** – New nested menu support
 *  **Carousel API updates** – Now uses `emblaOptions` for full alignment with Mantine
-*  **Component improvements** – Updated `Switch`, better dropdown behavior, and more
+*  **Component improvements** – Updated `Switch`, better dropdown behavior, and more!
 
 
 ### New: Functions as Props
@@ -60,7 +61,7 @@ See the new [Functions As Props docs](/functions-as-props) — includes working 
 
 .. sourcetabs::docs/datepicker/disabledates_function.py, assets/examples-js/disabled_dates.js
 
-#### Example: MultiSelect: Custom Option with Components
+#### Example: MultiSelect: Components in the Dropdown
 .. exec::docs.multiselect.render_option
     :code: false
 
@@ -69,12 +70,16 @@ See the new [Functions As Props docs](/functions-as-props) — includes working 
 
 ### New NotificationContainer component
 
-Notifications are now handled by a single component: `NotificationContainer`. This replaces the previous
-`NotificationProvider` + `Notification` approach with one that is more aligned with Mantine's implementation. Also, there is
-now direct access to Mantine's  Notification API in clientside callbacks. 
+Notifications are now handled by a single component: `NotificationContainer`.
+
+This new approach replaces the previous  `NotificationProvider` + `Notification` pattern with one that’s simpler, more
+consistent with Mantine, and resolves a number of issues from earlier versions.
+
+Also, there is now direct access to Mantine's  Notification API in clientside callbacks. 
+
+Thanks to @BSd3v for contributing this new component.
 
 Please see the new [Notification docs](/components/notification) for more details.
-
 
 
 ### New Menu with Sub Menus
@@ -151,7 +156,7 @@ with `hideDetached=False`. To see the difference, try to scroll the container th
 
 
 
-#### Carousel changes
+### Carousel changes
 The following props are removed.  They now need to be passed to embla using the `emblaOptions` prop
 - `loop`
 - `align`
@@ -181,4 +186,35 @@ Switch component styles were updated to include indicator inside the thumb. You 
 ### Other changes
 - [CodeHighlight](/components/code-highlight) - To reduce the bundle size only the top 10 languages are supported.  If you would like to include other, please open an issue on our GitHub
 - DatesProvider timezone -DatesProvider component no longer supports timezone option – all Mantine dates components now use strings in YYYY-MM-DD HH:mm:ss format as values and do not contain timezone information.
-- See the [Mantine Changelog](https://mantine.dev/changelog/8-0-0/#other-changes) for other changes
+- See the [Mantine Changelog](https://mantine.dev/changelog/8-0-0/#other-changes) for other changes.
+
+---
+
+### Quick Start
+
+Just a reminder...
+
+* If you're using Dash ≥ 3.0.0, you no longer need to set the React version manually.
+* If you're using DMC ≥ 1.2.0, there's no need to include additional stylesheets like `dmc.styles.ALL`.
+
+Here’s a minimal app to get started:
+
+```python
+import dash_mantine_components as dmc
+from dash import Dash
+
+app = Dash()
+
+app.layout = dmc.MantineProvider(
+    dmc.Alert(
+        "Welcome to Dash Mantine Components",
+        title="Hello!",
+        color="violet",
+    )
+)
+
+if __name__ == "__main__":
+    app.run(debug=True)
+```
+
+
