--- a/docs/changelogs/V2.0.0.md
+++ b/docs/changelogs/V2.0.0.md
@@ -27,7 +27,7 @@ major releases.  See our [Migration Guide](/migration) for step-by-step instruct
 *  **Component improvements** – Updated `Switch`, better dropdown behavior, and more!
 
 
-### New: Functions as Props
+### New Functions as Props
 You can now pass JavaScript functions to DMC components using:
 ```python
 {"function": "yourFunctionName"}
