--- a/docs/changelogs/V2.0.0.md
+++ b/docs/changelogs/V2.0.0.md
@@ -46,7 +46,10 @@ You can even pass options from Python:
 ```
 Functions live in `/assets/*.js` under the global `window.dashMantineFunctions` object.
 
-See the new [Functions As Props docs](/functions-as-props) — includes working examples and a guide for getting help from AI if you don’t write JavaScript.
+🤔 Don’t know JavaScript? No problem!
+The docs include examples of how to use AI to convert Python functions to JavaScript, with prompt templates to help you get reliable results every time:
+
+See the new [Functions As Props docs](/functions-as-props)
 
 
 #### Example: Custom Slider Label + Scale
