add Releases section

--- a/docs/releases/V2.0.0.md
+++ b/docs/releases/V2.0.0.md
@@ -3,6 +3,7 @@ name: Version 2.0.0
 endpoint: /release-2-0-0
 description: Release announcement for Dash Mantine Components v2.0.0
 dmc: false
+category: Releases
 ---
 
 ### 🎉 Dash Mantine Components v2 (Powered by Mantine v8)
