--- a/docs/releases/V2.0.0.md
+++ b/docs/releases/V2.0.0.md
@@ -6,6 +6,8 @@ dmc: false
 category: Releases
 ---
 
+.. toc::
+
 ### 🎉 Dash Mantine Components v2 (Powered by Mantine v8)
 
 Released Jun 3, 2025
@@ -204,6 +206,11 @@ Just a reminder...
 * If you're using DMC ≥ 1.2.0, there's no need to include additional stylesheets like `dmc.styles.ALL`.
 
 Here’s a minimal app to get started:
+
+
+.. exec::docs.getting-started.hello_world
+   :code: false
+
 
 ```python
 import dash_mantine_components as dmc
