--- a/docs/releases/V2.1.0.md
+++ b/docs/releases/V2.1.0.md
@@ -6,6 +6,8 @@ dmc: false
 category: Releases
 ---
 
+.. toc::
+
 
 ### 🎉 Dash Mantine Components v2.1 (Powered by Mantine v8.1)
 
@@ -131,6 +133,9 @@ Just a reminder:
 * With DMC ≥ 1.2.0, you no longer need to include optional stylesheets such as `dmc.styles.ALL`.
 
 Here’s a minimal app to get started:
+
+.. exec::docs.getting-started.hello_world
+   :code: false
 
 ```python
 import dash_mantine_components as dmc
