--- a/docs/releases/V2.0.0.md
+++ b/docs/releases/V2.0.0.md
@@ -8,13 +8,9 @@ category: Releases
 
 .. toc::
 
-### 🎉 Dash Mantine Components v2 (Powered by Mantine v8)
+###  Dash Mantine Components v2 (Powered by Mantine v8)
 
 Released Jun 3, 2025
-
-We’re excited to announce a new release of Dash Mantine Components! This update brings a range of new components, 
-enhanced features, and improvements to make building beautiful Dash apps even easier. 
-
 
 ### Migration Guide
 
