--- a/docs/releases/V2.1.0.md
+++ b/docs/releases/V2.1.0.md
@@ -8,46 +8,49 @@ category: Releases
 
 .. toc::
 
-
-### 🎉 Dash Mantine Components v2.1 (Powered by Mantine v8.1)
-
-We’re excited to announce a new release of Dash Mantine Components! This update brings a range of new components, 
-enhanced features, and improvements to make building beautiful Dash apps even easier. 
+Released July 1, 2025
 
 ### What's New
  
-* New `ModalStack` and `DrawerStack` components for layered UIs
+* New `ModalStack` and `DrawerStack` components
 * Function support expanded across more components and props
 * Custom rendering options for calendar and tree views
 * UI refinements and new props across the board
+* Based on [Mantine 8.1.2](https://mantine.dev/changelog/8-1-0/)
 
 
 ### New ModalStack and DrawerStack components
 
-Use `ModalStack` or `DrawerStack` to render and manage multiple modals or drawers at once. These components handle focus, z-index stacking, and Escape key closing automatically.
+Use [ModalStack](/components/modal) or [DrawerStack](/components/drawer) to render and manage multiple modals or drawers at once. These components handle focus, z-index stacking, and Escape key closing automatically.
 
 
-Check out this ModalStack example:
+.. exec::docs.modal.modalstack
+    :code: false
 
-< Add links from docs here >
+.. sourcetabs::docs/modal/modalstack.py
+    :defaultExpanded: false
+    :withExpandedButton: true
+
 
 ### Calendar headerControlsOrder prop
 
-Calendar-based components now support the `headerControlsOrder` prop, which lets you customize the layout of header buttons. The value is a dictionary using keys `'previous'`, `'next'`, and `'level'`.
+Calendar-based components like [DatePicker](/components/datepicker) now support the `headerControlsOrder` prop, which lets you customize the layout of header buttons. The value is a dictionary using keys `'previous'`, `'next'`, and `'level'`.
 
 .. exec::docs.datepicker.headercontrolsorder
 
 
 
 ### Slider Domain prop
-`Slider` component now supports `domain` prop that allows setting the possible range of values independently of the min and max values:
+[Slider](/components/slider) component now supports `domain` prop that allows setting the possible range of values independently of the min and max values:
 
 
 .. exec::docs.slider.domain
 
 
 ### RangeSlider pushOnOverlap prop
-`RangeSlider` component now supports `pushOnOverlap` prop that defines whether the slider should push the overlapping thumb when the user drags it.
+[RangeSlider](/components/range-slider) component now supports `pushOnOverlap` prop that defines whether the slider should push the overlapping thumb when the user drags it.
+
+This examples shows  `pushOnOverlap=False`  (The default is `True`)
 
 .. exec::docs.slider.pushonoverlap
 
@@ -55,7 +58,7 @@ Calendar-based components now support the `headerControlsOrder` prop, which lets
 
 Function props were introduced in DMC v2.0, allowing you to pass JavaScript functions to certain component props for dynamic formatting, styling, and rendering.
 
-In v2.1, this support has been expanded to include even more components and props — including calendar inputs, AutoComplete, and Tree.
+In v2.1, this support has been expanded to include even more components and props — such as  calendar inputs, AutoComplete, and Tree.
 
 You can now customize things like:
 
@@ -96,11 +99,17 @@ This example:
 
 #### Example:  Custom Rendering of Tree component
 
-You can fully control how each node is rendered in the `Tree` component using the `renderNode` function. This allows 
+You can fully control how each node is rendered in the [Tree](/components/tree) component using the `renderNode` function. This allows 
 custom icons, layout, or complex styling beyond the built-in options.
 
 
-< add links to example here >
+
+.. exec::docs.tree.renderNode
+    :code: false
+
+.. sourcetabs::docs/tree/renderNode.py, assets/examples-js/tree.js
+    :defaultExpanded: true
+    :withExpandedButton: true
 
 ### AutoComplete improvements
 
