moved migration guide to bottom

--- a/docs/releases/V2.1.0.md
+++ b/docs/releases/V2.1.0.md
@@ -2,8 +2,8 @@
 name: Version 2.1.0
 endpoint: /release-2-1-0
 description: Release announcement for Dash Mantine Components v2.1.0
-dmc: false
 category: Releases
+order: 100
 ---
 
 .. toc::
