--- a/docs/releases/V2.0.0.md
+++ b/docs/releases/V2.0.0.md
@@ -2,8 +2,8 @@
 name: Version 2.0.0
 endpoint: /release-2-0-0
 description: Release announcement for Dash Mantine Components v2.0.0
-dmc: false
 category: Releases
+order: 200
 ---
 
 
