add autocomplete docs

--- a/docs/releases/V2.1.0.md
+++ b/docs/releases/V2.1.0.md
@@ -118,7 +118,7 @@ Thanks to first-time contributor @ihor-lazariev for adding the following feature
 * Support for functions in `renderOption` and `filter` props
 * New `clearButtonProps` and `clearable` props
 
-.. exec::docs.autocomplete.renderOptions
+.. exec::docs.autocomplete.render_option
 
 
 
