add release announcement

--- a/docs/releases/V2.2.0.md
+++ b/docs/releases/V2.2.0.md
@@ -10,40 +10,119 @@ order: 99
 
 Released August 18, 2025
 
-### What's New
  
+### Bar value label props
+
+You can now pass props down to [recharts LabelList](https://recharts.org/en-US/api/LabelList) component with `valueLabelProps` prop. 
+
+Thanks to first time contributor @CGaul for adding this feature! 
+
+.. exec::docs.barchart.bar_value_label_props
 
 
+### Source edit mode in RichTextEditor
 
-### New ModalStack and DrawerStack components
+[RichTextEditor](/components/richtexteditor) now supports source code edit mode.
 
-Use [ModalStack](/components/modal) or [DrawerStack](/components/drawer) to render and manage multiple modals or drawers at once. These components handle focus, z-index stacking, and Escape key closing automatically.
+.. exec::docs.richtexteditor.sourcecode
 
 
-.. exec::docs.modal.modalstack
+### Styles API attributes
+You now can pass attributes to inner elements of all components that support [Styles API](/styles-api) with `attributes`
+prop. For example, it can be used to add data attributes for testing purposes:
+
+.. exec::docs.styles-api.attributes
+
+
+### Container grid strategy
+
+ [Container](/components/container) now supports `strategy="grid"` prop which enables more features.
+
+Differences from the default `strategy="block"`:
+
+- Uses `display: grid` instead of `display: block`
+- Does not include default inline padding
+- Does not set `max-width` on the root element (uses grid template columns instead)
+
+Features supported by `strategy="grid"`:
+
+- Everything that is supported by `strategy="block"`
+- Children with `data-breakout` attribute take the entire width of the container's parent element
+- Children with `data-container` inside `data-breakout` have the same width as the main grid column
+
+Example of using breakout feature:
+
+.. exec::docs.container.strategy
     :code: false
 
-.. sourcetabs::docs/modal/modalstack.py
+
+.. sourcetabs::docs/container/strategy.py
     :defaultExpanded: false
     :withExpandedButton: true
 
 
-### Calendar headerControlsOrder prop
+### Tooltip Target
 
-Calendar-based components like [DatePicker](/components/datepicker) now support the `headerControlsOrder` prop, which lets you customize the layout of header buttons. The value is a dictionary using keys `'previous'`, `'next'`, and `'level'`.
+New [Tooltip](/components/tooltip) `target` prop is an alternative to `children`. It accepts a string (selector), an HTML
+element or a `ref` object with HTML element. Use `target` prop when you do not render tooltip target as JSX element—for
+example, in a clientside callback.
 
-.. exec::docs.datepicker.headercontrolsorder
+Example of using target prop with a string selector:
+
+.. exec::docs.tooltip.target
 
 
+### autoSelectOnBlur prop
 
-### Other Changes
+[Select](/components/select) and [Autocomplete](/components/autocomplete) components now support `autoSelectOnBlur` prop.
+Use it to automatically select the highlighted option when the input loses focus. To see this feature in action: select
+an option with up/down arrows, then click outside the input:
+
+
+.. exec::docs.select.autoselectonblur
+
+### Accordion chevronIconSize prop
+- The [Accordion](/components/accordion) default `chevronSize` prop value was changed to `auto` to allow using dynamic icon sizes.
+- The `Accordion` now supports `chevronIconSize` prop to configure size of the default chevron icon`
+
+.. exec::docs.accordion.interactive
+    :code: false
+
 
 
 ### New in the Docs
 
+#### New Autocomplete component section
 
 
----
+Use [Autocomplete](/components/autocomplete) component in the following cases:
+
+- You want to allow user to enter any value
+- You want to display suggestions to the user based on the input value
+- You want to preserve user input on blur if option was not selected from the dropdown
+- `value` and `label` of the option are the same.
+
+.. exec::docs.autocomplete.simple
+
+#### Layout Overview
+
+The new [Layout Overview](/layout-overview) section helps you choose the right component for your use case:
+
+* `Grid` – Use when columns have different sizes (for example, first column is 1/3 width, second is 2/3).
+* `SimpleGrid` – Use for equal-width columns.
+* `Group` – Arrange items horizontally.
+* `Stack` – Arrange items vertically.
+* `Flex` – Create both horizontal and vertical flexbox layouts. More flexible than `Group` or `Stack`, but requires more configuration.
+
+This section also explains the differences between `Container`, `Paper`, and `Box`, and provides an overview of
+`AppShell` for adding headers, footers, navbars, and asides to your app.
+
+
+#### Theming and Style section updates
+
+The Theming and Styles are now two sections to make the information easier to find.  Plus there is a new
+[Mantine Overview](/mantine-overview) section to help understand the basic features of the Mantine API.
+
 
 ### Quick Start
 
@@ -71,7 +150,6 @@ app.layout = dmc.MantineProvider(
     )
 )
 
-if __name__ == "__main__":
-    app.run(debug=True)
+app.run(debug=True)
 ```
 
