--- a/docs/releases/V2.2.0.md
+++ b/docs/releases/V2.2.0.md
@@ -10,21 +10,23 @@ order: 99
 
 Released August 18, 2025
 
- 
-### Bar value label props
-
-You can now pass props down to [recharts LabelList](https://recharts.org/en-US/api/LabelList) component with `valueLabelProps` prop. 
-
-Thanks to first time contributor @CGaul for adding this feature! 
-
-.. exec::docs.barchart.bar_value_label_props
-
 
 ### Source edit mode in RichTextEditor
 
 [RichTextEditor](/components/richtexteditor) now supports source code edit mode.
 
 .. exec::docs.richtexteditor.sourcecode
+
+
+ 
+### Bar value label props
+
+[Bar Chart](/components/barchart) now supports passing props down to [recharts LabelList](https://recharts.org/en-US/api/LabelList) component with `valueLabelProps` prop. 
+
+Thanks to first time contributor @CGaul for adding this feature! 
+
+.. exec::docs.barchart.bar_value_label_props
+
 
 
 ### Styles API attributes
@@ -83,7 +85,7 @@ an option with up/down arrows, then click outside the input:
 
 ### Accordion chevronIconSize prop
 - The [Accordion](/components/accordion) default `chevronSize` prop value was changed to `auto` to allow using dynamic icon sizes.
-- The `Accordion` now supports `chevronIconSize` prop to configure size of the default chevron icon`
+- The `Accordion` now supports `chevronIconSize` prop to configure size of the default chevron icon.
 
 .. exec::docs.accordion.interactive
     :code: false
