add clearSearchOnFocus example

--- a/docs/releases/V2.2.0.md
+++ b/docs/releases/V2.2.0.md
@@ -9,6 +9,7 @@ order: 99
 .. toc::
 
 Released August 18, 2025
+Based on Mantine 8.2.5
 
 
 ### Source edit mode in RichTextEditor
@@ -82,6 +83,19 @@ an option with up/down arrows, then click outside the input:
 
 
 .. exec::docs.select.autoselectonblur
+
+
+### clearSearchOnFocus prop
+
+For searchable [Select](/components/select) components, when `clearSearchOnFocus=True`, the search input will be cleared each time the
+field gains focus.  This is useful when you want the user to start with an empty search box each time, without having 
+to manually delete the existing text.  
+
+Thanks @vaughnfuelling1 for the [feature request](https://github.com/snehilvj/dash-mantine-components/issues/626)!
+
+
+.. exec::docs.select.clearsearchonfocus
+
 
 ### Accordion chevronIconSize prop
 - The [Accordion](/components/accordion) default `chevronSize` prop value was changed to `auto` to allow using dynamic icon sizes.
