add custom controls examples for RichTextEditor

--- a/docs/releases/V2.2.0.md
+++ b/docs/releases/V2.2.0.md
@@ -19,6 +19,21 @@ Based on Mantine 8.2.5
 .. exec::docs.richtexteditor.sourcecode
 
 
+### Custom controls in RichTextEditor 
+Use `CustomControl` in the `controlsGroups` to create create custom controls in the `toolbar`. Mantine wraps TipTap V2.9.
+To see the commands available for use in your custom controls see the [TipTap documentation](https://v2.tiptap.dev/docs/editor/api/commands)
+
+.. functions_as_props::
+
+.. exec::docs.richtexteditor.custom_control_star
+    :code: false
+
+.. sourcetabs::docs/richtexteditor/custom_control_star.py, assets/examples-js/rte_insert_content.js
+    :defaultExpanded: true
+    :withExpandedButton: true 
+
+To see an example
+
  
 ### Bar value label props
 
