add custom controls examples for RichTextEditor

--- a/docs/releases/V2.2.0.md
+++ b/docs/releases/V2.2.0.md
@@ -25,21 +25,22 @@ To see the commands available for use in your custom controls see the [TipTap do
 
 .. functions_as_props::
 
-.. exec::docs.richtexteditor.custom_control_star
+.. exec::docs.richtexteditor.custom_controls_table
     :code: false
 
-.. sourcetabs::docs/richtexteditor/custom_control_star.py, assets/examples-js/rte_insert_content.js
-    :defaultExpanded: true
+.. sourcetabs::docs/richtexteditor/custom_controls_table.py, assets/examples-js/rte_table_controls.js, assets/examples/rte-table.css
+    :defaultExpanded: false
     :withExpandedButton: true 
 
-To see an example
+
+Thanks to @BSd3v for adding this feature in [PR #629](https://github.com/snehilvj/dash-mantine-components/pull/629)
 
  
 ### Bar value label props
 
 [Bar Chart](/components/barchart) now supports passing props down to [recharts LabelList](https://recharts.org/en-US/api/LabelList) component with `valueLabelProps` prop. 
 
-Thanks to first time contributor @CGaul for adding this feature! 
+Thanks to first time contributor @CGaul for adding this feature in [PR #620](https://github.com/snehilvj/dash-mantine-components/pull/620)! 
 
 .. exec::docs.barchart.bar_value_label_props
 
