--- a/docs/releases/V2.2.0.md
+++ b/docs/releases/V2.2.0.md
@@ -145,6 +145,10 @@ This section also explains the differences between `Container`, `Paper`, and `Bo
 The Theming and Styles are now two sections to make the information easier to find.  Plus there is a new
 [Mantine Overview](/mantine-overview) section to help understand the basic features of the Mantine API.
 
+### Patch Release 2.2.1
+ - Updates to Mantine 8.2.7
+ - Fixes regression where nested `NavLink` did not open on click
+ - Fixes `MulitSelect` and `Select` - changes to the `data` and `value` are batched so they only trigger a single callback
 
 ### Quick Start
 
