add back autoSelectOnBlur examples

--- a/docs/releases/V2.2.0.md
+++ b/docs/releases/V2.2.0.md
@@ -89,7 +89,14 @@ Example of using target prop with a string selector:
 
 .. exec::docs.tooltip.target
 
+### autoSelectOnBlur prop
 
+[Select](/components/select) and [Autocomplete](/components/autocomplete) components now support `autoSelectOnBlur` prop.
+Use it to automatically select the highlighted option when the input loses focus. To see this feature in action: select
+an option with up/down arrows, then click outside the input:
+
+
+.. exec::docs.select.autoselectonblur
 
 ### clearSearchOnFocus prop
 
