update scrollTo examples

--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -16,11 +16,11 @@ Based on Mantine 8.2.8
 
 In the [ScrollArea](/components/scrollarea), you can now programmatically control the scroll position of the viewport.
 
-- `top` – set vertical position as a percentage (0–100)
-- `left` – set horizontal position as a percentage (0–100)
-- `behavior` – choose between auto (instant) or smooth (animated) scrolling (auto by default)
+  * `top` – The vertical position as pixels (number) or percentage (string) from '0%' to '100%'
+  * `left` – The horizontal position as pixels (number) or percentage (string) from '0%' to '100%'
+  * `behavior` – scroll behavior: `auto` (instant) or `smooth` (animated), `smooth` by default
 
-.. exec::docs.scrollarea.scrollto_buttons
+.. exec::docs.scrollarea.scrollto
 
 
 ### New ScrollAreaAutosize component
