Add Overlay component

--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -29,3 +29,13 @@ In the [ScrollArea](/components/scrollarea), you can now programmatically contro
 
 .. exec::docs.scrollarea.autosize
 
+
+
+### New (in the docs) Overlay component
+
+`Overlay` creates a customizable  layer over content or the entire viewport. Perfect for darkening effects, interactive
+image overlays, and custom loading states with configurable opacity, color, and positioning.
+
+.. exec::docs.overlay.simple
+
+
