--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -11,6 +11,23 @@ order: 98
 Released September 19, 2025
 Based on Mantine 8.2.8
 
+### New DirectionProvider component
+
+All Mantine components support right-to-left direction out of the box. You can preview how components work with RTL
+direction by clicking direction control in the top right corner.
+
+See the [RTL (right-to-left) direction](/rtl)  guide for details on enabling RTL text and adding a toggle to your app.
+
+
+```python
+app.layout = dmc.DirectionProvider(
+    dmc.MantineProvider([
+     # your app layout
+     ]),
+    direction="rtl"
+)
+```
+
 
 ### New in ScrollArea: `scrollTo` prop 
 
