add minicalendar to release announcement

--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -28,6 +28,14 @@ app.layout = dmc.DirectionProvider(
 )
 ```
 
+### New MiniCalendar component
+
+See the [MiniCalendar](/components/mini-calendar) documentation for more examples!
+
+
+.. exec::docs.minicalendar.simple
+
+
 
 ### New in ScrollArea: `scrollTo` prop 
 
