add vertical progress, and update progress tooltip

--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -35,6 +35,11 @@ See the [MiniCalendar](/components/mini-calendar) documentation for more example
 
 .. exec::docs.minicalendar.simple
 
+### Progress vertical orientation
+
+[Progress](/components/progress) now supports vertical orientation:
+
+.. exec::docs.progress.orientation
 
 
 ### New in ScrollArea: `scrollTo` prop 
