add clearSearchOnChange to MultiSelect section

--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -69,3 +69,10 @@ image overlays, and custom loading states with configurable opacity, color, and 
 .. exec::docs.overlay.simple
 
 
+### Clear search on change in MultiSelect
+
+You can now set the `clearSearchOnChange=False` to enable selecting multiple items using the same search query.
+
+.. exec::docs.multiselect.clearsearch
+
+
