--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -75,4 +75,8 @@ You can now set the `clearSearchOnChange=False` to enable selecting multiple ite
 
 .. exec::docs.multiselect.clearsearch
 
+### debounce in Autocomplete
+
+In the Autocomplete component, you can now set the [debounce prop](/debounce) to  delay the update of the `value` until
+the user stops interacting, reducing callback frequency for inputs.
 
