--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -8,15 +8,16 @@ order: 98
 
 .. toc::
 
-Released September 19, 2025
-Based on Mantine 8.2.8
+Released September 20, 2025  
+
+Based on Mantine 8.3.1
 
 ### New DirectionProvider component
 
-All Mantine components support right-to-left direction out of the box. You can preview how components work with RTL
+Mantine components support right-to-left (RTL) direction out of the box. You can preview how components work with RTL
 direction by clicking direction control in the top right corner.
 
-See the [RTL (right-to-left) direction](/rtl)  guide for details on enabling RTL text and adding a toggle to your app.
+See the [RTL (right-to-left) direction guide](/rtl)  for details on enabling RTL direction and adding a toggle to your app.
 
 
 ```python
@@ -30,7 +31,7 @@ app.layout = dmc.DirectionProvider(
 
 ### New MiniCalendar component
 
-See the [MiniCalendar](/components/mini-calendar) documentation for more examples!
+The new [MiniCalendar](/components/mini-calendar) component makes it easy to add compact calendars.
 
 
 .. exec::docs.minicalendar.simple
@@ -41,42 +42,50 @@ See the [MiniCalendar](/components/mini-calendar) documentation for more example
 
 .. exec::docs.progress.orientation
 
+### RichTextEditor upgraded to Tiptap V3
 
-### New in ScrollArea: `scrollTo` prop 
+[RichTextEditor](/components/richtexteditor) is now build ton Tiptap V3 enabling features like  `BackgroundColor`, `FontFamily`, `FontSize`, `LineHeight`.
 
-In the [ScrollArea](/components/scrollarea), you can now programmatically control the scroll position of the viewport.
+There are no known breaking changes when upgrading. If you’ve built custom controls, check the Tiptap V3 docs to confirm compatibility.
 
-  * `top` – The vertical position as pixels (number) or percentage (string) from '0%' to '100%'
-  * `left` – The horizontal position as pixels (number) or percentage (string) from '0%' to '100%'
-  * `behavior` – scroll behavior: `auto` (instant) or `smooth` (animated), `smooth` by default
+Here is an example of creating custom buttons to change the font size:
+
+
+### ScrollArea scrollTo prop
+
+The [ScrollArea](/components/scrollarea), now includes a `scrollTo` prop letting you programmatically control the viewport position.
+
+  * `top` – The vertical position (pixels or percentage string, from '0%' to '100%')
+  * `left` – The horizontal position (pixels or percentage string, from '0%' to '100%')
+  * `behavior` – `auto` (instant) or `smooth` (animated, default)
 
 .. exec::docs.scrollarea.scrollto
 
 
 ### New ScrollAreaAutosize component
 
-`ScrollAreaAutosize` component allows to create scrollable containers when given max-height is reached.
+`ScrollAreaAutosize` component creates a scrollable container once a given max-height is reached.
 
 .. exec::docs.scrollarea.autosize
 
 
 
-### New (in the docs) Overlay component
+### New Overlay component
 
-`Overlay` creates a customizable  layer over content or the entire viewport. Perfect for darkening effects, interactive
-image overlays, and custom loading states with configurable opacity, color, and positioning.
+[Overlay](/components/overaly) creates a customizable  layer over content or the entire viewport. It’s useful for dimming
+effects, interactive overlays, and custom loading states. You can configure opacity, color, and positioning.
 
 .. exec::docs.overlay.simple
 
 
-### Clear search on change in MultiSelect
+### MultiSelect improvement
 
-You can now set the `clearSearchOnChange=False` to enable selecting multiple items using the same search query.
+[MultiSelect](/components/multiselect) now supports `clearSearchOnChange=False` allowing multiple selectios from the same search query.
 
 .. exec::docs.multiselect.clearsearch
 
-### debounce in Autocomplete
+### Autocomplete debounce prop
 
-In the Autocomplete component, you can now set the [debounce prop](/debounce) to  delay the update of the `value` until
-the user stops interacting, reducing callback frequency for inputs.
+The [Autocomplete](/components/autocomplete) component now supports the [debounce prop.](/debounce) This delays the update of the `value` until
+the user stops interacting, reducing callback frequency.
 
