--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -8,14 +8,15 @@ order: 98
 
 .. toc::
 
-Released September 20, 2025  
+September 21, 2025  
 
 Based on Mantine 8.3.1
 
-### New DirectionProvider component
+### New DirectionProvider component 
 
-Mantine components support right-to-left (RTL) direction out of the box. You can preview how components work with RTL
-direction by clicking direction control in the top right corner.
+Mantine supports right-to-left (RTL) layouts out of the box. Try the new direction toggle in the header of these 
+docs — one click and the entire app flips to RTL. Not just the text, but every component adapts. Check out the [sliders](/components/slider)
+in RTL mode, they feel completely natural.
 
 See the [RTL (right-to-left) direction guide](/rtl)  for details on enabling RTL direction and adding a toggle to your app.
 
@@ -45,7 +46,7 @@ The new [MiniCalendar](/components/mini-calendar) component makes it easy to add
 
 ### ScrollArea scrollTo prop
 
-The [ScrollArea](/components/scrollarea), now includes a `scrollTo` prop letting you programmatically control the viewport position.
+The [ScrollArea](/components/scrollarea), now includes a `scrollTo` prop to control the viewport position.
 
   * `top` – The vertical position (pixels or percentage string, from '0%' to '100%')
   * `left` – The horizontal position (pixels or percentage string, from '0%' to '100%')
