add RichTextEditor Tiptap3 update

--- a/docs/releases/V2.2.0.md
+++ b/docs/releases/V2.2.0.md
@@ -20,8 +20,8 @@ Based on Mantine 8.2.5
 
 
 ### Custom controls in RichTextEditor 
-Use `CustomControl` in the `controlsGroups` to create create custom controls in the `toolbar`. Mantine wraps TipTap V2.9.
-To see the commands available for use in your custom controls see the [TipTap documentation](https://v2.tiptap.dev/docs/editor/api/commands)
+Use `CustomControl` in the `controlsGroups` to create create custom controls in the `toolbar`. Mantine wraps Tiptap V2.9.
+To see the commands available for use in your custom controls see the [Tiptap documentation](https://v2.tiptap.dev/docs/editor/api/commands)
 
 Thanks to @BSd3v for adding this feature in [PR #629](https://github.com/snehilvj/dash-mantine-components/pull/629)
 
