--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -44,6 +44,24 @@ The new [MiniCalendar](/components/mini-calendar) component makes it easy to add
 .. exec::docs.progress.orientation
 
 
+### RichTextEditor upgraded to Tiptap V3
+
+[RichTextEditor](/components/richtexteditor) is now built on Tiptap V3 enabling features like  `BackgroundColor`,
+`FontFamily`, `FontSize`, `LineHeight`.
+
+Note: This change has no known breaking changes, but customizations may be affected.  See our [migration guide,](https://www.dash-mantine-components.com/migration) for details.
+  
+
+Here is an example of creating custom buttons to change the font size:
+
+
+.. exec::docs.richtexteditor.custom_controls_fontsize
+    :code: false
+
+.. sourcetabs::docs/richtexteditor/custom_controls_fontsize.py, assets/examples-js/rte_fontsize.js
+    :defaultExpanded: false
+    :withExpandedButton: true 
+
 ### ScrollArea scrollTo prop
 
 The [ScrollArea](/components/scrollarea), now includes a `scrollTo` prop to control the viewport position.
