add LLMs to v2.3.0 release

--- a/docs/releases/V2.3.0.md
+++ b/docs/releases/V2.3.0.md
@@ -100,3 +100,8 @@ effects, interactive overlays, and custom loading states. You can configure opac
 The [Autocomplete](/components/autocomplete) component now supports the [debounce prop.](/debounce) This delays the update of the `value` until
 the user stops interacting, reducing callback frequency.
 
+### LLMs.txt
+You can now use LLMs.txt file with Cursor and other IDEs. The file is automatically updated with each release and
+includes every demo and documentation page from the DMC docs site. It is about 1.6MB. You can find the latest version 
+of LLMs.txt and documentation in the  [LLMs](//llms) section.
+
