updated release announcement

--- a/docs/releases/V2.4.0.md
+++ b/docs/releases/V2.4.0.md
@@ -12,6 +12,33 @@ November 10, 2025
 
 Based on Mantine 8.3.1
 
+### New: Copy to Clipboard Component
+
+You can now easily copy text to the clipboard with the new `CopyButton` and `CustomCopyButton` components.
+
+Highlights:
+
+- Simple one-line setup for copying text or values
+- Customizable icons, colors, and labels for copied state
+- Support for copying from another component using `target_id`
+- Trigger copy actions in callbacks with `triggerCopy=True`
+- Build fully custom buttons using JavaScript functions in the `CustomCopyButton`
+
+Check out the new [Copy Button docs](/components/copybutton)
+
+
+
+.. exec::docs.copybutton.children
+
+
+---
+
+A fun demo of `CopyButton` and `target_id`: need a quick way to say “no”? Fetch a random answer from [No As A Service](https://github.com/hotheadhacker/no-as-a-service) and copy it with a single click.
+
+
+.. exec::docs.copybutton.no-as-a-service
+
+
 ### Chart components now supports additional functions as props
 
 THe `AreaChart`, `BarChart`, `BubbleChart`, `CompositeChart`, `LineChart`, and `ScatterChart` now  accept functions for the following props:
