--- a/docs/releases/V2.4.0.md
+++ b/docs/releases/V2.4.0.md
@@ -1,7 +1,7 @@
 ---
 name: Version 2.4.0
 endpoint: /release-2-4-0
-description: Release announcement for Dash Mantine Components v2.3.0
+description: Release announcement for Dash Mantine Components v2.4.0
 category: Releases
 order: 97
 ---
@@ -12,13 +12,14 @@ November 10, 2025
 
 Based on Mantine 8.3.1
 
-### New: Copy to Clipboard Component
+### New: Copy to Clipboard Components
 
-You can now easily copy text to the clipboard with the new `CopyButton` and `CustomCopyButton` components.
+The new `CopyButton` and `CustomCopyButton` provide clipboard functionality like `dcc.Clipboard`, but adds Mantine 
+styling and customization.
 
 Highlights:
 
-- Simple one-line setup for copying text or values
+- Simple one-line setup for copying text to the clipboard
 - Customizable icons, colors, and labels for copied state
 - Support for copying from another component using `target_id`
 - Trigger copy actions in callbacks with `triggerCopy=True`
@@ -39,19 +40,18 @@ A fun demo of `CopyButton` and `target_id`: need a quick way to say “no”? Fe
 .. exec::docs.copybutton.no-as-a-service
 
 
-### Chart components now supports additional functions as props
+### More chart props now support functions
 
-THe `AreaChart`, `BarChart`, `BubbleChart`, `CompositeChart`, `LineChart`, and `ScatterChart` now  accept functions for the following props:
+The `AreaChart`, `BarChart`, `BubbleChart`, `CompositeChart`, `LineChart`, and `ScatterChart` now accept functions for these props:
 
-- `xAxisProps`, `yAxisProps`, `gridProps`, `rightYAxisProps` (all charts)
-- `zAxisProps` (`BubbleChart` only)
+* `xAxisProps`, `yAxisProps`, `gridProps`, `rightYAxisProps` (all charts)
+* `zAxisProps` (`BubbleChart` only)
 
-See the [Functions As Props guide](/functions-as-props)  for details.
+See the [Functions As Props guide](/functions-as-props) for details.
 
+#### Example: format x-axis tick labels
 
-#### Example format x axis tick labels
-
-This example uses a JavaScript function to format dates on the x axis that are provided as datetime objects.
+This example uses a JavaScript function to format x-axis tick labels for datetime values.
 
 .. exec::docs.areachart.xaxisprops
     :code: false
@@ -64,19 +64,18 @@ This example uses a JavaScript function to format dates on the x axis that are p
 
 ### AI-friendly documentation
 
-LLM friendly documentation is now available for Dash Mantine Components. It follows the LLMs.txt standard, allowing AI tools like ChatGPT, Cursor,
-Windsurf, and Claude to better understand DMC components and props.
+LLM-friendly documentation is now available for Dash Mantine Components. It follows the `llms.txt` standard, enabling AI
+tools like ChatGPT, Cursor, Windsurf, and Claude to better understand DMC components and props.
 
 New in this release:
+* Generate a custom `llms.txt` file that includes only the components you use — improving AI accuracy and response speed.
+* Each docs page now includes a "Copy for LLMs" button for copying AI-friendly content directly into a chat.
 
-* You can now generate a custom `llms.txt` file that includes only the components you use, improving AI accuracy and response speed.
-* Each docs page includes a “Copy for LLMs” button, making it easy to copy that page’s content in an AI-friendly format.  Use this when you want to paste a few pages directly into a chat session (e.g. ChatGPT or Cursor).
+See the [LLMs section](/llms) for full details and customization options.
 
-The full file and customization options are available in the [LLMs section](/llms).
 
 ### Other notable updates
 
-This release includes:
-- Mantine patch update 8.3.1 through 8.3.6  See the  [Mantine Releases](https://github.com/mantinedev/mantine/releases) for more details.
+* Mantine patch updates from 8.3.1 through 8.3.6. See the [Mantine Releases](https://github.com/mantinedev/mantine/releases) for details.
+* Improved rendering in several components, including the `Stepper`. Thanks to @chgiesse for [PR #664](https://github.com/snehilvj/dash-mantine-components/pull/664).
 
-- Improved rendering on certain components such as the `Stepper`.  Thanks to @chgiesse for [PR 664](https://github.com/snehilvj/dash-mantine-components/pull/664)
