--- a/docs/releases/V2.4.0.md
+++ b/docs/releases/V2.4.0.md
@@ -14,28 +14,23 @@ Based on Mantine 8.3.6
 
 ### New: Copy to Clipboard Components
 
-The new `CopyButton` and `CustomCopyButton` provide clipboard functionality like `dcc.Clipboard`, but adds Mantine 
-styling and customization.
+The new  `CopyButton` and `CustomCopyButton` components is like `dcc.Clipboard` with a Mantine theme.
 
-Highlights:
-
-- Simple one-line setup for copying text to the clipboard
 - Customizable icons, colors, and labels for copied state
 - Support for copying from another component using `target_id`
-- Trigger copy actions in callbacks with `triggerCopy=True`
-- Build fully custom buttons using JavaScript functions in the `CustomCopyButton`
+- Trigger copy in callbacks with `triggerCopy=True`
+- Build fully custom copy to clipboard buttons with `CustomCopyButton`
 
 Check out the new [Copy Button docs](/components/copybutton)
 
-
+#### Example:  Styling the CopyButton
 
 .. exec::docs.copybutton.children
 
 
 ---
-
-A fun demo of `CopyButton` and `target_id`: need a quick way to say “no”? Fetch a random answer from [No As A Service](https://github.com/hotheadhacker/no-as-a-service) and copy it with a single click.
-
+#### Example: Copy from another component:
+Need a quick way to say “no”? Fetch a random answer from [No-as-a-Service](https://github.com/hotheadhacker/no-as-a-service) and copy it with a single click.
 
 .. exec::docs.copybutton.no-as-a-service
 
@@ -58,8 +53,28 @@ This example uses a JavaScript function to format x-axis tick labels for datetim
 
 
 .. sourcetabs::docs/areachart/xaxisprops.py, assets/examples-js/format-datetime.js
-    :defaultExpanded: true
+    :defaultExpanded: false
     :withExpandedButton: true
+
+### New RichTextEditor features
+
+- Code highlighting is now available
+- New Props:  `editable`, `focus`  Thanks for the PR [@chgiesse](https://github.com/chgiesse)
+- Access Editor API in a clientside callback
+
+
+See examples of all the new features in the [RichTextEditor docs](/components/richtexteditor)
+
+#### Example: Editable prop
+Note the toolbar is hidden when the editor is read-only
+
+.. exec::docs.richtexteditor.editable
+
+#### Example:  Accessing Editor clientside
+Get full access to the editor API in clientside callbacks, including executing commands, inspecting
+content, and updating the editor state.  
+
+.. exec::docs.richtexteditor.geteditor
 
 
 ### AI-friendly documentation
@@ -78,4 +93,12 @@ See the [LLMs section](/llms) for full details and customization options.
 
 * Mantine patch updates from 8.3.1 through 8.3.6. See the [Mantine Releases](https://github.com/mantinedev/mantine/releases) for details.
 * Improved rendering in several components, including the `Stepper`. Thanks to @chgiesse for [PR #664](https://github.com/snehilvj/dash-mantine-components/pull/664).
+
+### Thanks
+
+Special thanks to:
+
+* [@chgiesse](https://github.com/chgiesse) for contributing two PRs in this release
+* [@BSd3v](https://github.com/BSd3v) for providing help and guidance along the way
+* [@alexcjohnson](https://github.com/alexcjohnson) for thoughtful feedback during code reviews
 
