--- a/docs/releases/V2.4.0.md
+++ b/docs/releases/V2.4.0.md
@@ -12,16 +12,18 @@ November 6, 2025
 
 Based on Mantine 8.3.6
 
+
 ### New: Copy to Clipboard Components
 
-The new  `CopyButton` and `CustomCopyButton` components is like `dcc.Clipboard` with a Mantine theme.
+The new `CopyButton` and `CustomCopyButton` components are similar to `dcc.Clipboard`, but with full Mantine styling and customization.
 
-- Customizable icons, colors, and labels for copied state
+- Customizable icons, colors, and labels for the copied state
 - Support for copying from another component using `target_id`
-- Trigger copy in callbacks with `triggerCopy=True`
-- Build fully custom copy to clipboard buttons with `CustomCopyButton`
+-Trigger copying in callbacks with `triggerCopy=True`
+-Build fully custom copy-to-clipboard buttons with `CustomCopyButton`
 
-Check out the new [Copy Button docs](/components/copybutton)
+Check out the new [Copy Button docs](/components/copybutton).
+
 
 #### Example:  Styling the CopyButton
 
@@ -30,7 +32,7 @@ Check out the new [Copy Button docs](/components/copybutton)
 
 ---
 #### Example: Copy from another component:
-Need a quick way to say “no”? Fetch a random answer from [No-as-a-Service](https://github.com/hotheadhacker/no-as-a-service) and copy it with a single click.
+Need a quick way to say “No”? Fetch a random excuse from [No-as-a-Service](https://github.com/hotheadhacker/no-as-a-service) and copy it with a single click.
 
 .. exec::docs.copybutton.no-as-a-service
 
