--- a/docs/releases/V2.4.0.md
+++ b/docs/releases/V2.4.0.md
@@ -13,6 +13,16 @@ November 6, 2025
 Based on Mantine 8.3.6
 
 
+### Version 2.4.1
+
+December 20, 2025  
+
+Based on Mantine 8.3.10  
+
+See [Changelog](https://github.com/snehilvj/dash-mantine-components/releases/tag/2.4.1)  
+
+
+
 ### New: Copy to Clipboard Components
 
 The new `CopyButton` and `CustomCopyButton` components are similar to `dcc.Clipboard`, but with full Mantine styling and customization.
@@ -93,14 +103,20 @@ See the [LLMs section](/llms) for full details and customization options.
 
 ### Other notable updates
 
-* Mantine patch updates from 8.3.1 through 8.3.6. See the [Mantine Releases](https://github.com/mantinedev/mantine/releases) for details.
+* Mantine patch updates from 8.3.1 through 8.3.10. See the [Mantine Releases](https://github.com/mantinedev/mantine/releases) for details.
 * Improved rendering in several components, including the `Stepper`. Thanks to @chgiesse for [PR #664](https://github.com/snehilvj/dash-mantine-components/pull/664).
+
+In 2.4.1:
+* Added `anchorProps` to `Anchor` allowing to pass any valid attribute (like `download`) to the `Anchor` component. Thanks to @jksinton for  [PR #676](https://github.com/snehilvj/dash-mantine-components/pull/676).
+* Added `withAlignedLabels` prop to support offsetting the selected check icon in `Select` and `MultiSelect`
+* Updated to TipTap 3.14.0
 
 ### Thanks
 
 Special thanks to:
 
 * [@chgiesse](https://github.com/chgiesse) for contributing two PRs in this release
+* [@jksinton](https://github.com/jksinton) first time contributor, for ading `anchorProps` prop to `Anchor`
 * [@BSd3v](https://github.com/BSd3v) for providing help and guidance along the way
 * [@alexcjohnson](https://github.com/alexcjohnson) for thoughtful feedback during code reviews
 
