--- a/docs/releases/V2.5.0.md
+++ b/docs/releases/V2.5.0.md
@@ -21,7 +21,7 @@ See [Changelog](https://github.com/snehilvj/dash-mantine-components/releases/tag
 Use the `TableOfContents` component to display a table of contents similar to the sidebar in these docs. The
 component tracks scroll position and highlights current heading in the list.
 
-Check out all the new features in the [Table Of Contents docs](/components/tableofcontents).
+Check out all the new features in the [Table Of Contents docs](/components/table-of-contents).
 
 *This component was added by @deadkex in [PR #513](https://github.com/snehilvj/dash-mantine-components/pull/513)*
 
@@ -31,14 +31,11 @@ Check out all the new features in the [Table Of Contents docs](/components/table
 
 ### Custom DMC components
 
-We now export `MantineHooks`, `MantineCore`, and `MantineDates` from dash-mantine-components. This gives component 
-authors access to the same Mantine hooks and utilities that DMC uses internally.
+`MantineHooks`, `MantineCore`, and `MantineDates` are now exported from dash-mantine-components, giving component authors access to the same hooks and utilities DMC uses internally.
 
-With these exports, you can build more advanced components using the patterns recommended by Mantine. For example,
-you can create a custom `Select` component on top of lower-level building blocks like `Combobox`, while keeping 
-consistent theming in Dash.
+This allows you to build custom components, such as a `Select` built on lower-level building blocks like `Combobox`, while maintaining consistent theming in Dash.
 
-See custom DMC components based on the [Mantine custom Combobox examples](https://mantine.dev/combobox/?e=BasicSelect) in this [GitHub](https://github.com/AnnMarieW/dmc_custom_components)
+For more details and working examples, see custom DMC components inspired by [Mantine’s custom Combobox examples](https://mantine.dev/combobox/?e=BasicSelect) in this [GitHub repo](https://github.com/AnnMarieW/dmc_custom_components).
 
 *This feature was added by @BSd3v in [PR# 653](https://github.com/snehilvj/dash-mantine-components/pull/653)*  
 
