--- a/docs/releases/V2.5.0.md
+++ b/docs/releases/V2.5.0.md
@@ -31,11 +31,11 @@ Check out all the new features in the [Table Of Contents docs](/components/table
 
 ### Custom DMC components
 
-`MantineHooks`, `MantineCore`, and `MantineDates` are now exported from dash-mantine-components, giving component authors access to the same hooks and utilities DMC uses internally.
+`MantineHooks` and `MantineCore` are now exported from dash-mantine-components, giving component authors access to the same hooks and utilities DMC uses internally.
 
-This allows you to build custom components, such as a `Select` built on lower-level building blocks like `Combobox`, while maintaining consistent theming in Dash.
+This allows you to make custom components, such as a `Select` built on lower-level building blocks like [Combobox](https://mantine.dev/core/combobox/), while maintaining consistent theming in Dash.
 
-For more details and working examples, see custom DMC components inspired by [Mantine’s custom Combobox examples](https://mantine.dev/combobox/?e=BasicSelect) in this [GitHub repo](https://github.com/AnnMarieW/dmc_custom_components).
+For more details and examples, see custom DMC components based on  [Mantine’s custom Combobox examples](https://mantine.dev/combobox/?e=BasicSelect) in this [GitHub repo](https://github.com/AnnMarieW/dmc_custom_components).
 
 *This feature was added by @BSd3v in [PR# 653](https://github.com/snehilvj/dash-mantine-components/pull/653)*  
 
