--- a/docs/releases/V2.5.0.md
+++ b/docs/releases/V2.5.0.md
@@ -31,11 +31,17 @@ Check out all the new features in the [Table Of Contents docs](/components/table
 
 ### Custom DMC components
 
-`MantineHooks` and `MantineCore` are now exported from dash-mantine-components, giving component authors access to the same hooks and utilities DMC uses internally.
+You can now build custom Dash components that use Mantine the same way Dash Mantine Components does.
 
-This allows you to make custom components, such as a `Select` built on lower-level building blocks like [Combobox](https://mantine.dev/core/combobox/), while maintaining consistent theming in Dash.
+Previously, custom components built with the standard Dash component template had to bundle their own copy of Mantine.
+Because of this, they could not access the `MantineProvider` used by DMC, which meant themes, styles, and context did
+not work as expected.
 
-For more details and examples, see custom DMC components based on  [Mantine’s custom Combobox examples](https://mantine.dev/combobox/?e=BasicSelect) in this [GitHub repo](https://github.com/AnnMarieW/dmc_custom_components).
+DMC now exports `MantineHooks` and `MantineCore`, allowing custom components to use the same Mantine hooks, utilities,
+and context as the built-in components. This enables a wide range of custom components, such as building advanced `Select`
+or `MultiSelect` on top of Mantine’s [Combobox](https://mantine.dev/core/combobox/), while keeping theme and behavior consistent inside a Dash app.
+
+For examples and step-by-step instructions, see the custom DMC components in this [GitHub repository](https://github.com/AnnMarieW/dmc_custom_components).
 
 *This feature was added by @BSd3v in [PR# 653](https://github.com/snehilvj/dash-mantine-components/pull/653)*  
 
